add 3 ejecut-methods 'fcfs','sjf','prioridad' and adjust new input for 'prioridad' on the future 'roundRobin'

--- a/interface.ui
+++ b/interface.ui
@@ -612,9 +612,7 @@ border-radius:10px;</string>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">color:white;
-background:white;
-border:white;</string>
+     <string notr="true"/>
     </property>
     <property name="text">
      <string>INGRESE</string>
